<resources>
    <string name="app_name">Practise1</string>
    <string name="todo">TODO</string>
    <string name="MuteButton">Mute</string>
    <string name="TextPlay">Play</string>
    <string name="TextPause">Pause</string>
    <string name="IconAudio">Icon of Audio File</string>
    <string name="ButtonNextActivity">Next Activity</string>
    <string name="_10">-10%</string>
    <string name="buttons"><![CDATA[<-- Buttons -->]]></string>
</resources>